# dna

./: .gitignore  1  CMakeLists.txt  Chain_old.cpp  Chain_old.hpp  README.md  SimChainRad01  grannens_oljud_log.txt  todo.txt  untitled.sublime-workspace
configs/: .DEFAULT.swn  .DEFAULT.swo  CONFIG_SPECIFICATION  DEFAULT  Simulations  TESTCONF
data/: 1000_measures_end_to_end_phantom.dna  1000_measures_end_to_end_saw.dna  CONFIG  Default_info.dna  Default_span.dna  Sim001_info.dna  Sim001_span.dna  Sim10000Globules_info.dna  Sim10000Globules_r01_info.dna  Sim10000Globules_r01_span.dna  Sim10000Globules_span.dna  Sim1000Globules_r02_info.dna  Sim1000Globules_r02_span.dna  SimSameChain_data.dna  SimSameChain_info.dna  SimSameChain_span.dna  Verify_Default.dna  Visualize_Default.dna  default_data.dna  default_distance.dna  default_visualize_data.dna  initial_state.m  meanSquareDistance.m  sim1_data.dna  sim1_info.dna  sim1_span.dna
include/: .Chain.hpp.swo  .CollisionGrid2.hpp.swo  .Distance.hpp.swo  .Particle.hpp.swo  .SAWChain.hpp.swo  .Verify.hpp.swo  Capsule.hpp  Chain.hpp  ChainMap.hpp  ChainStatistics.hpp  Chain_old.hpp  CollisionGeometry.hpp  CollisionGrid.hpp  CollisionGrid2.hpp  ConfReader.hpp  Cylinder.hpp  Distance.hpp  Dynamics.hpp  EigenLibs.hpp  FractalGlobule.hpp  MeanDistance.hpp  PFloat.hpp  Particle.hpp  PhantomChain.hpp  Plane.hpp  RChain.hpp  RandomEngine.hpp  SAWChain.hpp  Simulation.hpp  Sphere.hpp  Spring.hpp  Statistics.hpp  Verify.hpp  Visualize.hpp  VolBox.hpp
matlab/: Error.m  LangeVin.m  LeastSquare.m  Ordo.m  Verify.m  Verify_bin.m  bin_data.m  cut_globule.m  getProb.m  globule_data.m  interpolate_l.m  moldyntest3D.m  plot_data.m  plot_end_to_end.m  testingshit.m  visualize_globule.m
matlab/Distance/: Animate.m  CalculateD.m  Distance.m  GridVis.m  Gridvis_simple.m  cylinder_debug.m  debug_collision.m  distance.dna  distance_1.dna  distance_2.dna  distance_3.dna  distance_Trivial.dna  draw_rect.m  get_sphere_line.m  grid.txt  mupad1.mn  particle_trajectory.dna  plot_epsiloid.m  set_sphere_debug_variables.m  sphere_debug.m  transform.m
matlab/Misc/: gen.m  moldyntest3D.m  springtest1D.m  springtest3D.m
matlab/Verify/: R.dna  Verify.m
matlab/phantom/: FG, 2000 links, 10000 samples, no weights.fig  FG, 2000 links, 10000 samples, weighted.fig  R.dna  Random_ver.m  Rfgi.dna  Rnw.dna  Rw.dna  VerR.m  ax1.fig  calc_R.m  gen_phantom.m  plot_chain.m  verBinned.m
matlab/save/: WORKING_PHANTOM  WORKING_PHANTOM.dna  WORKING_SAW.dna  (+1 more)
src/: .Chain.cpp.swo  .CollisionGrid2.cpp.swo  .Distance.cpp.swo  .Particle.cpp.swo  .SAWChain.cpp.swo  .Verify.cpp.swo  .main.cpp.swo  Chain.cpp  ChainMap.cpp  ChainStatistics.cpp  Chain_old.cpp  CollisionGeometry.cpp  CollisionGrid.cpp  CollisionGrid2.cpp  ConfReader.cpp  Cylinder.cpp  Distance.cpp  Dynamics.cpp  FractalGlobule.cpp  Particle.cpp  PhantomChain.cpp  Plane.cpp  RChain.cpp  RandomEngine.cpp  SAWChain.cpp  Simulation.cpp  Sphere.cpp  Spring.cpp  Statistics.cpp  Verify.cpp  Visualize.cpp  main.cpp
(+14 files in other folders)
